--- a/ja/index.html
+++ b/ja/index.html
@@ -10,7 +10,6 @@
 
         <!-- Stylesheets
     	============================================= -->
-        <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,300i,400,400i,600,600i,700" rel="stylesheet">
         <link rel="stylesheet" href="./css/bootstrap.css" type="text/css" />
         <link rel="stylesheet" href="./style.css" type="text/css" />
         <link rel="stylesheet" href="./css/dark.css" type="text/css" />
@@ -657,6 +656,8 @@
         <!-- External JavaScripts
     	============================================= -->
         <script type="text/javascript" src="./js/jquery.js"></script>
+        <script src="https://use.typekit.net/hdz0duz.js"></script>
+        <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
         <!-- Footer Scripts
         ============================================= -->
