--- a/ja/index.html
+++ b/ja/index.html
@@ -303,24 +303,17 @@
     		<h2>チーム</h2>
     		<p>時代の最先端をゆくクリプト関係の仕事に興味がありますか？ String Labで働いてみませんか？</p>
     	</div>
-        <div id="team-desc" class="sidebar-content pull-left">
-            <h6>President/CTO</h6>
-            <h3>Dominic Williams</h3>
-            <p>英国出身のプロトコルのオタク、コーダー、そしてテクノロジー企業の連続起業家。 ドミニクの最新ベンチャーであるMMO（大規模マルチプレイヤー オンライン ゲーム）のユーザは3万人に達し、それによりスケーラブルテクノロジー開発に好きなだけ時間を使えるようになりました。ドミニクは少しヒッピーですが、ロンドン大学のコンピューターサイエンス部門で賞を受賞したこともあります。</p>
-        </div>
         <div class="team-list-container">
-            <div class="team-feature pull-left">
-                <div class="team team-list clearfix">
-                    <div class="team-image">
-                        <img src="./images/team/dom-head2.jpg" alt="Dominic Williams">
-                    </div>
-                </div>
+            <div id="team-desc" class="pull-left">
+                <h6>President/CTO</h6>
+                <h3>Dominic Williams</h3>
+                <p>英国出身のプロトコルのオタク、コーダー、そしてテクノロジー企業の連続起業家。 ドミニクの最新ベンチャーであるMMO（大規模マルチプレイヤー オンライン ゲーム）のユーザは3万人に達し、それによりスケーラブルテクノロジー開発に好きなだけ時間を使えるようになりました。ドミニクは少しヒッピーですが、ロンドン大学のコンピューターサイエンス部門で賞を受賞したこともあります。</p>
             </div>
         	<div class="container pull-left">
         		<div class="row">
         			<div class="team-item">
         				<div class="team team-list clearfix">
-        					<div class="team-image">
+        					<div class="team-image active">
         						<img src="./images/team/dom-head2.jpg" alt="Dominic Williams">
         					</div>
         					<div class="team-desc">
@@ -579,8 +572,7 @@
                 let name = $(selector).parent().next().find('.team-title > h4').html();
                 let title = $(selector).parent().next().find('.team-title > h4 + span').html();
                 let content = $(selector).parent().next().find('.team-content > p').html();
-                $('.team-list-container .team-image').removeClass('active');
-                $('.team-feature .team-image').find('img').attr('src', $(selector).attr('src'));
+                $('.team-item .team-image').removeClass('active');
                 $('#team-desc > h6').html(name);
                 $('#team-desc > h3').html(title);
                 $('#team-desc > p').html(content);
