update team section

--- a/index.html
+++ b/index.html
@@ -225,18 +225,6 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
         						<div class="team-content">
         						    <p>{% t index.team-dominic-intro %}</p>
         						</div>
-        						<a href="https://twitter.com/dominic_w" class="social-icon si-rounded si-small si-twitter">
-        							<i class="icon-twitter"></i>
-        							<i class="icon-twitter"></i>
-        						</a>
-        						<a href="https://medium.com/@dominic_w" class="social-icon si-rounded si-small si-tumblr">
-        							<i class="icon-tumblr"></i>
-        							<i class="icon-tumblr"></i>
-        						</a>
-        						<a href="https://www.linkedin.com/in/thedwilliams" class="social-icon si-rounded si-small si-linkedin">
-        							<i class="icon-linkedin"></i>
-        							<i class="icon-linkedin"></i>
-        						</a>
         					</div>
         				</div>
         			</div>
@@ -257,10 +245,6 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
         							<i class="icon-twitter"></i>
         							<i class="icon-twitter"></i>
         						</a>
-        						<a href="https://www.linkedin.com/in/tomding" class="social-icon si-rounded si-small si-linkedin">
-        							<i class="icon-linkedin"></i>
-        							<i class="icon-linkedin"></i>
-        						</a>
         					</div>
         				</div>
         			</div>
@@ -277,18 +261,6 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
         						<div class="team-content">
         							<p>{% t index.team-timo-intro %}</p>
         						</div>
-        						<a href="https://twitter.com/timothanke" class="social-icon si-rounded si-small si-twitter">
-        							<i class="icon-twitter"></i>
-        							<i class="icon-twitter"></i>
-        						</a>
-        						<a href="https://www.linkedin.com/in/timo-hanke-62079775" class="social-icon si-rounded si-small si-linkedin">
-        							<i class="icon-linkedin"></i>
-        							<i class="icon-linkedin"></i>
-        						</a>
-        						<a href="https://github.com/bcpki" class="social-icon si-rounded si-small si-github">
-        							<i class="icon-github"></i>
-        							<i class="icon-github"></i>
-        						</a>
         					</div>
         				</div>
         			</div>
@@ -307,10 +279,6 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
         						<div class="team-content">
         							<p>{% t index.team-enzo-intro %}</p>
         						</div>
-        						<a href="https://www.linkedin.com/in/ehaussecker" class="social-icon si-rounded si-small si-linkedin">
-        							<i class="icon-linkedin"></i>
-        							<i class="icon-linkedin"></i>
-        						</a>
         					</div>
         				</div>
         			</div>
@@ -327,10 +295,6 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
         						<div class="team-content">
         							<p>{% t index.team-tomomi-intro %}</p>
         						</div>
-        						<a href="https://www.linkedin.com/in/tomomi-menjo" class="social-icon si-rounded si-small si-linkedin">
-        							<i class="icon-linkedin"></i>
-        							<i class="icon-linkedin"></i>
-        						</a>
         					</div>
         				</div>
         			</div>
@@ -347,14 +311,60 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
         						<div class="team-content">
         							<p>{% t index.team-jon-intro %}</p>
         						</div>
-        						<a href="http://www.pokedstudio.com/" class="social-icon si-rounded si-small si-github">
-        							<i class="icon-github"></i>
-        							<i class="icon-github"></i>
-        						</a>
         					</div>
         				</div>
         			</div>
         		</div>
+                <div class="row">
+                    <div class="team-item">
+                        <div class="team team-list clearfix">
+                            <div class="team-image">
+                                <img src="{{ base }}/images/team/shigeo-head1.jpg" alt="Shigeo Mitsunari">
+                            </div>
+                            <div class="team-desc">
+                                <div class="team-title">
+                                    <h4>Shigeo Mitsunari</h4>
+                                    <span>Staff Cryptographer</span>
+                                </div>
+                                <div class="team-content">
+                                    <p>{% t index.team-shigeo-intro %}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-item">
+                        <div class="team team-list clearfix">
+                            <div class="team-image">
+                                <img src="{{ base }}/images/team/will-head1.jpg" alt="Will Cong">
+                            </div>
+                            <div class="team-desc">
+                                <div class="team-title">
+                                    <h4>Will Cong</h4>
+                                    <span>Economics Advisor</span>
+                                </div>
+                                <div class="team-content">
+                                    <p>{% t index.team-will-intro %}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-item">
+                        <div class="team team-list clearfix">
+                            <div class="team-image">
+                                <img src="{{ base }}/images/team/houman-head1.jpg" alt="Houman Shadab">
+                            </div>
+                            <div class="team-desc">
+                                <div class="team-title">
+                                    <h4>Houman Shadab</h4>
+                                    <span>Legal Advisor</span>
+                                </div>
+                                <div class="team-content">
+                                    <p>{% t index.team-houman-intro %}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         	</div>
             <div class="clearfix"></div>
         </div>
