--- a/index.html
+++ b/index.html
@@ -365,6 +365,24 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="team-item">
+                        <div class="team team-list clearfix">
+                            <div class="team-image">
+                                <img src="{{ base }}/images/team/mahnush-head1.jpg" alt="Mahnush Movahedi">
+                            </div>
+                            <div class="team-desc">
+                                <div class="team-title">
+                                    <h4>Mahnush Movahedi</h4>
+                                    <span>Senior Researcher and Engineer</span>
+                                </div>
+                                <div class="team-content">
+                                    <p>{% t index.team-mahnush-intro %}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         	</div>
             <div class="clearfix"></div>
         </div>
