--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
         <div class="heading-block center">
             <h2>{% t index.navbar-research %}</h2>
         </div>
-        <div class="team-list-container">
+        <div class="list-container">
             <div class="sidebar-content pull-left">
                 <h3>{% t index.research-title %}</h3>
                 <p>{% t index.research-intro %}</p>
@@ -111,7 +111,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
             <div class="heading-block center">
                 <h2>{% t index.dfinity-title %}</h2>
             </div>
-            <div class="team-list-container">
+            <div class="list-container">
                 <div class="sidebar-content pull-left">
                     <h5 class="active">#tech</h5>
                     <h5 class="active">#business</h5>
@@ -189,11 +189,11 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
     		<h2>{% t index.team-title %}</h2>
     		<p>{% t index.team-subtitle %}</p>
     	</div>
-        <div class="team-list-container">
+        <div class="list-container">
             <div class="sidebar-content pull-left">
-                <h6>President/CTO</h6>
-                <h3>Dominic Williams</h3>
-                <p>{% t index.team-dominic-intro %}</p>
+                <h6></h6>
+                <h3></h3>
+                <p></p>
             </div>
         	<div class="container pull-left">
         		<div class="row">
